# Requirements-Gathering-Website

./: .gitattributes  .gitignore  CMakeLists.txt  DEPLOY.md  PROJECT_STRUCTURE.md  README.md  config.ini.example  git-push-frontend.ps1  nginx.conf.example  package-lock-temp.json  需求文档.md  项目结构分析.md
front-end/: .env.example  README.md  index.html  package.json  vite.config.ts  前端需求文档.md  需求参考
front-end/src/: App.tsx
front-end/src/api/: deviceApi.ts  requirementApi.ts
front-end/src/components/: DeviceQuery.css  DeviceQuery.tsx  DeviceReport.css  DeviceReport.tsx  Layout.css  Layout.tsx  RequirementQuery.css  RequirementQuery.tsx  RequirementReport.css  RequirementReport.tsx
front-end/src/utils/: format.ts
scripts/: diagnose.sh
sql/: init.sql
src/: main.cpp
src/business/: DeviceManager.cpp  DeviceManager.hpp  ReportHandler.cpp  ReportHandler.hpp
src/net/: Connection.cpp  Connection.hpp  HttpParser.cpp  HttpParser.hpp  TcpServer.cpp  TcpServer.hpp
src/storage/: ConnectionPool.cpp  ConnectionPool.hpp  MemoryStore.cpp  MemoryStore.hpp  MySQLStore.cpp  MySQLStore.hpp  StoreInterface.hpp
src/thread/: BlockingQueue.hpp  ThreadPool.cpp  ThreadPool.hpp
src/utils/: Config.cpp  Config.hpp  JsonParser.cpp  JsonParser.hpp  Logger.cpp  Logger.hpp
